Fixed dark navbar transparency, vertically aligned skills in grid, added mockdata cards

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -24,6 +24,7 @@ nav {
     a:hover {
         color: #FF4D5A;
     }
+    background-color: #2B2B2B;
     font-family: 'Montserrat' , sans-serif;
     font-weight: 600;
 }
